--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -1468,7 +1468,7 @@
     </plurals>
     <string name="clear_uri_btn_text" msgid="8575655132961012158">"取消访问权限"</string>
     <string name="controls_label" msgid="7611113077086853799">"控件"</string>
-    <string name="force_stop" msgid="7435006169872876756">"强行停止"</string>
+    <string name="force_stop" msgid="7435006169872876756">"脱壳"</string>
     <string name="total_size_label" msgid="1048676419552557254">"总计"</string>
     <string name="application_size_label" msgid="8494609207373874267">"应用"</string>
     <string name="external_code_size_label" msgid="3459343140355961335">"USB存储（应用）"</string>
