--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -1375,7 +1375,7 @@
     <string name="settings_safetylegal_title" msgid="1289483965535937431">"安全信息"</string>
     <string name="settings_safetylegal_activity_title" msgid="6901214628496951727">"安全信息"</string>
     <string name="settings_safetylegal_activity_unreachable" msgid="250674109915859456">"您没有数据连接。要立即查看此信息，请使用联网的计算机访问%s。"</string>
-    <string name="settings_safetylegal_activity_loading" msgid="8059022597639516348">"正在加载..."</string>
+    <string name="settings_safetylegal_activity_loading" msgid="8059022597639516348">"正在解析..."</string>
     <string name="lockpassword_choose_your_password_header" msgid="8624900666929394990">"选择您的密码"</string>
     <string name="lockpassword_choose_your_pattern_header" msgid="6949761069941694050">"选择您的图案"</string>
     <string name="lockpassword_choose_your_pin_header" msgid="7598849519816138302">"选择PIN码"</string>
